[package]
name = "sewriter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.29"
global-hotkey = "0.6"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
dirs = "5.0"

[[bin]]
name = "sewriter"
path = "src/main.rs"
